--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>季度銷售數據分析</title>
+    <title>季度銷售數據分析 QBR</title>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
@@ -2206,5 +2206,9 @@
             });
         }
     </script>
+    
+    <footer style="text-align: center; padding: 30px 20px; color: #9ca3af; font-size: 0.9em; margin-top: 50px; border-top: 1px solid #e5e7eb;">
+        Created by Morio © 2025
+    </footer>
 </body>
 </html>
