--- a/index.html
+++ b/index.html
@@ -2207,7 +2207,7 @@
         }
     </script>
     
-    <footer style="text-align: center; padding: 30px 20px; color: #9ca3af; font-size: 0.9em; margin-top: 50px; border-top: 1px solid #e5e7eb;">
+    <footer style="text-align: center; padding: 30px 20px; color: #ffffff; font-size: 0.9em; margin-top: 50px; border-top: 1px solid #e5e7eb;">
         Created by Morio © 2025
     </footer>
 </body>
