--- a/index.html
+++ b/index.html
@@ -152,17 +152,19 @@
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
+            justify-content: flex-start;
+            align-items: center;
             position: sticky;
             top: 0;
             background: white;
             z-index: 100;
-            padding: 15px 0;
+            padding: 15px 0 15px 20px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
             border-radius: 8px;
         }
         
         .filter-group {
-            flex: 1;
+            flex: 0 0 auto;
             min-width: 200px;
         }
         
