--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@
         
         .sidebar-section label {
             display: block;
-            margin-bottom: 8px;
-            font-size: 0.9em;
-            color: rgba(255,255,255,0.9);
-            font-weight: 500;
+            margin-bottom: 10px;
+            font-size: 0.95em;
+            color: white;
+            font-weight: bold;
         }
         
         .sidebar-section .file-buttons {
@@ -508,7 +508,7 @@
                     <label>📊 對比A檔案：</label>
                     <div class="file-buttons" id="fileButtonsA"></div>
                 </div>
-                <div style="margin-bottom: 20px;">
+                <div style="margin-bottom: 20px; margin-top: 25px;">
                     <label>📊 對比B檔案：</label>
                     <div class="file-buttons" id="fileButtonsB"></div>
                 </div>
