--- a/index.html
+++ b/index.html
@@ -3013,7 +3013,12 @@
             // 添加每周数据
             weeks.forEach((week, index) => {
                 const yoyWeek = trafficA[index] > 0 ? ((trafficB[index] - trafficA[index]) / trafficA[index] * 100) : 0;
-                const yoyColor = yoyWeek >= 0 ? '#22c55e' : '#ef4444';
+                let yoyColor = '#6b7280';  // 默认灰色
+                if (yoyWeek > 0) {
+                    yoyColor = '#22c55e';  // 正增长绿色
+                } else if (yoyWeek < 0) {
+                    yoyColor = '#ef4444';  // 负增长红色
+                }
                 const yoySign = yoyWeek > 0 ? '+' : '';
                 
                 tableHTML += `
@@ -3028,7 +3033,12 @@
             });
             
             // 添加总计行
-            const totalYoyColor = totalYoY >= 0 ? '#22c55e' : '#ef4444';
+            let totalYoyColor = '#6b7280';  // 默认灰色
+            if (totalYoY > 0) {
+                totalYoyColor = '#22c55e';  // 正增长绿色
+            } else if (totalYoY < 0) {
+                totalYoyColor = '#ef4444';  // 负增长红色
+            }
             const totalYoySign = totalYoY > 0 ? '+' : '';
             tableHTML += `
                     <tr style="background: #e0f2fe; font-weight: bold;">
